fix: updated styles to align the text to the tile as well as the line height

--- a/packages/core/src/components/read-more/read-more.scss
+++ b/packages/core/src/components/read-more/read-more.scss
@@ -12,7 +12,7 @@ section.expansion {
   &.expanded .expansion-content {
     display: block;
     max-height: initial;
-    padding: 2px 5px;
+    padding: 2px 5px 2px 1.7rem;
   }
 
   button {
@@ -34,6 +34,7 @@ section.expansion {
     }
 
     .expansion-heading-icon {
+      margin-top: .1rem;
       margin-left: 5px;
       margin-right: 8px;
       vertical-align: top;
